<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:theme="@style/ToolbarTheme" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/menuhome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home" />

        <TextView
            android:id="@+id/menumenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu" />

        <TextView
            android:id="@+id/menuset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/set" />

        <TextView
            android:id="@+id/menusearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/search" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/menupager"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

</LinearLayout>