<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input"
            android:orientation="vertical" >

            <!-- android:ems="10"表示EditText内最多只显示10个字符，超出不显示 -->
            <!-- android:singleLine="true"表示不能全部显示时，后面用“…”来表示 -->

            <EditText
                android:id="@+id/register_edtId"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:ems="10"
                android:hint="@string/name"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>

            <!-- 横线 -->

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/register_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:paddingEnd="0dp"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/register_edtPwdtwo"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/pwdtwo"
                android:inputType="textPassword"
                android:paddingEnd="0dp"
                android:paddingStart="15dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/register_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_style"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/app_back"
        android:textColor="#0079FF"
        android:textSize="18sp" />

</LinearLayout>