<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginTop="5dp"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/myimg"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/mytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/myimg"
        android:text="@string/app_edit"
        android:textColor="#000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/mycontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mytitle"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/myimg"
        android:text="@string/app_back"
        android:textColor="#777"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/mycomment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:singleLine="true"
        android:text="@string/app_back"
        android:textColor="#777"
        android:textSize="14sp" />

</RelativeLayout>