<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/searchedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:background="@drawable/search_edittext_shape"
                android:drawableStart="@drawable/ic_searchlist"
                android:hint="@string/app_back"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_delete"
                android:src="@drawable/ic_delete"
                android:visibility="gone" />
        </FrameLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:text="@string/app_cancel"
            android:textColor="#EA5421"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/search_listview"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:visibility="gone" >
    </ListView>

</LinearLayout>