<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/layoutgood"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/blue"
        android:gravity="center" >

        <TextView
            android:id="@+id/goodtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutgood" >

        <ImageView
            android:id="@+id/goodimg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/goodname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/goodimg"
            android:text="@string/app_back"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/goodunivalent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/goodname"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/goodimg"
            android:text="@string/app_back"
            android:textColor="#777"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/goodquantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:singleLine="true"
            android:text="@string/app_back"
            android:textColor="#777"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>